<resources>

    <string name="app_name">LoyaltyApp</string>
    <string name="your_loyalty">Your Loyalty</string>
    <string name="recent_purchase">Recent Purchase</string>
    <string name="email">Email</string>
    <string name="error_email">*Please enter password</string>
    <string name="error_password">*Please enter password</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="if_u_r_new_user">If you are a new user then</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <!-- <string name="facebook_app_id">1776693595939351</string>(jayander id)-->
    <string name="facebook_app_id">209729726113385</string><!--jasminpadhy00@gmail.com-->
    <string name="cafe_assist">Cafe Assist</string>
    <string name="discount">50% Discount </string>
    <string name="redeem">Redeem</string>
    <string name="whatshot">Whats Hot</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_email">Enter Your Email Id and we Will Send You a Password reset link!</string>
    <string name="Submit">Submit</string>
    <string name="terms_and_condt_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque venenatis ex consectetur, placerat massa ac, luctus lacus. In a sodales arcu. Praesent sit amet faucibus ante. Vestibulum non enim odio. Mauris nec velit nec nulla facilisis dapibus.
        \n Nunc elit massa, congue nec lorem sed, facilisis interdum sapien. Curabitur urna dolor, euismod in magna vitae, accumsan varius turpis. Ut porta id elit vitae aliquet. Phasellus id dolor sit amet dui molestie tristique volutpat vitae mauris. Nunc pharetra elit et sem pretium, eget aliquam justo convallis.
        \nDuis et ornare felis, id suscipit elit. Sed tempus euismod tellus, a dignissim urna fermentum eget. Morbi facilisis, dolor eget porta iaculis, tellus orci faucibus lacus, cursus iaculis massa libero at nunc. Integer ac ligula aliquam, lobortis nulla ac, mattis risus.
        \n Suspendisse potenti. Fusce porta aliquet elementum. Maecenas volutpat, nibh non consequat ornare, leo mi blandit libero, dapibus maximus risus mi nec massa. Aliquam mollis orci non lacinia egestas. Mauris finibus blandit lacus at auctor. In hac habitasse platea dictumst. Vivamus vitae congue libero.
        \n Nulla venenatis vehicula dui in rhoncus. Suspendisse vulputate sapien quis dui suscipit, at blandit dolor placerat. Suspendisse pulvinar purus at tortor interdum, a efficitur dolor lacinia. Proin sit amet tellus est.
    </string>
    <string name="sort">Sort By</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New  Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="update">Update</string>
    <string name="pwd_error">*Password must contain atleast 6 charactrs</string>

    <string name="enter_valid_emailid">*Please enter valid email ID</string>
    <string name="take_a_photo">Take a Snap</string>
    <string name="take_from_gallery">Choose from Gallery</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="please_enter_email">*Please enter email ID</string>
    <string name="please_enter_password">*Please enter password</string>
    <string name="colon">:</string>
    <string name="first_name">First Name</string>
    <string name="abhi">Abhi</string>
    <string name="last_name">Last Name</string>
    <string name="mishra">Mishra</string>
    <string name="email_value">abhi@gmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_value">9858585858</string>
    <string name="card_type">Card Type</string>
    <string name="card_type_value">Visa</string>
    <string name="card_number">Card Number</string>
    <string name="card_no_value">1234567856562584</string>
    <string name="cvv">CVV</string>
    <string name="cvv_value">459</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_value">7/07/2016</string>
    <string name="change_password">Change Password?</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <!--    <string-array name="drawerItems">
        <item>Home</item>
        <item>Business Page</item>
        <item>Checkouts/Receipt</item>
        <item>History</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>-->
    <string-array name="drawerItems">
        <item>Home</item>
        <item>Refer A Friend</item>
        <item>History</item>
        <item>Pending Orders</item>
        <item>Payment</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string-array name="guest_drawerItems">
        <item>Home</item>
        <item>Refer A Friend</item>
        <item>History</item>
        <item>Pending Orders</item>
        <item>Settings</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="cam_cancel">CANCEL</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="camera_permission_denial">No Permission to use the Camera services</string>
    <string name="please_enter_first_name">*Please enter first name</string>
    <string name="please_enter_last_name">*Please enter last name</string>
    <string name="please_enter_mobile_number">*Please enter mobile number</string>
    <string name="error_mobile">*Please enter mobile number</string>
    <string name="error_firstname">*Please enter first name</string>
    <string name="error_lastname">*Please enter last name</string>
    <string name="emailid">Email ID</string>
    <string name="by_signing_up_u">By signing up you agree to</string>
    <string name="terms_and_condt"><u>Terms and Conditions</u></string>
    <string name="of_application">of the application</string>
    <string name="mobile_number_must_be">*Mobile number must be atleast of 10 characters</string>
    <string name="password_must_be">*Password must be atleast of 8 characters</string>
    <string name="password_doesnot_match">*Password doesn\'t match</string>
    <string name="please_enter_cvv">*Please enter CVV</string>
    <string name="card_number_must_be">*Card number must contain 16 characters</string>

    <string name="catalogue">Catalogue</string>

    <string name="checkin">Check-In</string>
    <string name="status_bar">STATUS BAR</string>
    <string name="total">TOTAL</string>
    <string name="one_six_zero">$160.00</string>
    <string name="place_order">Place Order</string>
    <string name="product1">Product 1</string>
    <string name="thirty">$30</string>
    <string name="ten">10</string>
    <string name="please_input">Please input your table number</string>
    <string name="if_not">If not please press continue</string>
    <string name="please_enter_conf_password">*Please enter confirm password</string>
    <string name="please_enter_card_number">*Please enter card number</string>
    <string name="please_enter_card_type">*Please enter card type</string>
    <string name="please_enter_cvv_must">*CVV number must contain 3 characters</string>


    <string name="area_code">Area Code</string>
    <string name="country_code">Country Code</string>
    <string name="error_areacode">*Please enter area code</string>
    <string name="error_countrycode">*Please enter country code</string>
    <string name="food">VegBiryani</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="check_out">Check Out</string>
    <string name="no_item">No. of Items</string>
    <string name="otp"> Enter OTP code</string>
    <string name="verify">Verify</string>
    <string name="resendOTP"><u>Resend OTP code</u></string>
    <string name="offerlist">Offer List</string>
    <string name="api_key">AIzaSyBjMqXucWx3nOOMfLfEQ95yRLfCeR63Cyg</string>
    <string name="please_check_internet_connection">Please check your Internet Connection</string>
    <string name="subTotal">SubTotal</string>
    <string name="serviceTax">ServiceTax</string>
    <string name="tvVat">Vat</string>
    <string name="grandTotal">Grand Total</string>
    <string name="business_type">Business Type</string>
    <string name="distance">Distance</string>
    <string name="popularity">Popularity</string>
    <string name="sort_by">Sort By</string>
    <string name="no_deals">No Loyalty Deals Found</string>
    <string name="no_deals_found">No deals found</string>
    <string name="no_hot_deals">No Hot deals found for this criteria</string>
    <string name="hot_deals_not_there">No Hot deals Found</string>
    <string name="history_not_found">History not Found.</string>
    <string name="feedback">Feedback</string>
    <string name="skip">Skip</string>


    <string name="lorem_epsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <string name="lorem_epsum">Lorem ispum</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="three">3.</string>
    <string name="two">2.</string>
    <string name="one">1.</string>
    <string name="beacon_are_not_detected">Beacons aren\'t detected!</string>
    <string name="error_otp">Please enter OTP</string>
    <string name="title_activity_tutorials">Tutorials</string>
    <string name="referal_id">Referral Id</string>
    <string name="save_payment">Pay</string>
    <string name="expiry">Expiry</string>
    <string name="please_check">Please check</string>
    <string name="add_payment">Add payment</string>
    <string name="no_pending_orders">No pending orders</string>
    <string name="name_on_card">Name on Card</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="please_select_item">Plese select item</string>
    <string name="bad_request">Bad Request</string>
    <string name="add_to_cart">Add To Basket</string>
    <string name="next">Next</string>
    <string name="please_wait">Please wait...</string>
    <string name="connection_error">Please check internet connection</string>

</resources>
