<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/guwa"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_20">
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/user2"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/cursor_green"

            android:singleLine="true"
            android:inputType="text"
            android:textSize="@dimen/sp_16"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_8"
            android:background="@null"/>
        <View
            android:id="@+id/viewFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errorfirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_firstname"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/video"
            android:textCursorDrawable="@drawable/cursor_green"

            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="text"
            android:textSize="@dimen/sp_16"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_8"
            android:background="@null"/>
        <View
            android:id="@+id/viewLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errorLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_lastname"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/email"
            android:textCursorDrawable="@drawable/cursor_green"

            android:hint="@string/emailid"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_16"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_8"
            android:background="@null"/>
        <View
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_erroremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/phone"
            android:textCursorDrawable="@drawable/cursor_green"

            android:hint="@string/mobile_number"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:inputType="number"
            android:textSize="@dimen/sp_16"
            android:maxLength="10"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_8"
            android:background="@null"/>
        <View
            android:id="@+id/viewMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errormobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/lock2"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_green"

            android:imeOptions="actionNext"
            android:textSize="@dimen/sp_16"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:maxLength="20"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_5"
            android:drawablePadding="@dimen/dp_10"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errorpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/lockc"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor_green"

            android:imeOptions="actionNext"
            android:textSize="@dimen/sp_16"
            android:maxLength="20"
            android:textColorHint="@color/white"
            android:hint="@string/confirm_pwd"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_6"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errorConfirpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etAreaCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:textCursorDrawable="@drawable/cursor_green"

            android:imeOptions="actionNext"
            android:textSize="@dimen/sp_16"
            android:maxLength="6"
            android:textColorHint="@color/white"
            android:hint="@string/area_code"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_6"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tvErrorAreaCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_areacode"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etCounteryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:textCursorDrawable="@drawable/cursor_green"

            android:imeOptions="actionDone"
            android:textSize="@dimen/sp_16"
            android:maxLength="10"
            android:textColorHint="@color/white"
            android:hint="@string/country_code"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_6"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tvErrorCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_countrycode"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_referal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:textCursorDrawable="@drawable/cursor_green"
            android:imeOptions="actionDone"
            android:textSize="@dimen/sp_16"
            android:maxLength="10"
            android:textColorHint="@color/white"
            android:hint="@string/referal_id"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_6"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/Submit"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20">
        <TextView
            android:id="@+id/tvBySigningUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_u"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/white"
            android:layout_marginRight="@dimen/dp_5"/>
        <TextView
            android:id="@+id/tvTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condt"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/lightPink"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvOfTheApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/of_application"
        android:textSize="@dimen/sp_13"
        android:gravity="center"
        android:textColor="@color/white"/>
</LinearLayout>
    </ScrollView>

</LinearLayout>
