<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg"
    android:gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/guwa"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp_30">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/email"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/sp_16"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_8"
            android:background="@null"/>
        <View
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_erroremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/lock2"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_green"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="@dimen/sp_16"
            android:maxLength="20"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:drawablePadding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_3"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/white"
            android:layout_marginTop="@dimen/dp_2"/>
        <TextView
            android:id="@+id/tv_errorpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textColor="@color/color_red"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10">

            <CheckBox
                android:id="@+id/checkboxRememberme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/uncheck"
                android:text="@string/remember_me"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:padding="@dimen/dp_3"
                android:layout_gravity="left"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:gravity="right"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20">
            <TextView
                android:id="@+id/tvIfNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_u_r_new_user"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/dp_5"/>
            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/lightPink"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10">
            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/fb"
                android:layout_marginRight="@dimen/dp_15" />
            <ImageView
                android:id="@+id/ivGPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/gplus"
                android:layout_marginLeft="@dimen/dp_15"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
