<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_4"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/tvMultiTextAns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_14"
            android:text="@string/lorem_epsum_text"
            android:textColor="@color/colorLightBlack"/>

    </LinearLayout>
    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:textSize="@dimen/dp_14"
        android:inputType="text"
        android:hint="@string/answer" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/colorLightBlack"/>
</LinearLayout>
